--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="title-topcontainer">
                 <img src="./assets/img/seta1.png" class="absolute imgtop-seta" alt="Imagem de seta decorativa">
                 <h1 data-anime="left" class="hidden1-left">Olá, seja bem-vindo(a) ao meu portfólio</h1>
-                <p data-anime="right" class="hidden2-left">Aqui você poderá conhecer mais sobre mim, as habilidades que possuo até o momento e os projetos que já produzi. Utilize os links abaixo para entrar em contato comigo ou pelo email disponível ao fim do site.</p>
+                <p data-anime="right" class="hidden2-left">Esse espaço foi pensado e construído inteiramente por mim, desde sua estrutura, estilização e design. Aqui você poderá conhecer mais sobre mim, as habilidades que possuo até o momento e os projetos que já produzi.</p>
                 <div class="top-links hidden3-bottom">
                     <a href="https://www.linkedin.com/in/gabriel-magro/" target="_blank"><i class="bi bi-linkedin"></i>  LinkedIn</a>
                     <a href="https://github.com/magrogabriel" data-anime2="bottom" target="_blank"><i class="bi bi-github"></i>   GitHub</a>
