--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
         </nav>
     </header>
 
+    <div id="return">
+        <a href="#header"><i class="bi bi-file-arrow-up-fill"></i></a>
+    </div>
+
     <section id="top">
         <div class="top-container">
             <div class="title-topcontainer">
                 <img src="./assets/img/seta1.png" class="absolute imgtop-seta" alt="Imagem de seta decorativa">
-                <h1 data-anime="left" class="hidden1-left">Olá, seja bem-vindo(a) ao meu portfólio</h1>
-                <p data-anime="right" class="hidden2-left">Esse espaço foi pensado e construído inteiramente por mim, desde sua estrutura, estilização e design. Aqui você poderá conhecer mais sobre mim, as habilidades que possuo até o momento e os projetos que já produzi.</p>
+                <h1 data-anime="left" class="hidden1">Olá, seja bem-vindo(a) ao meu portfólio</h1>
+                <p data-anime="right" class="hidden2">Esse espaço foi pensado e construído inteiramente por mim, desde sua estrutura, estilização e design. Aqui você poderá conhecer mais sobre mim, as habilidades que possuo até o momento e os projetos que já produzi.</p>
                 <div class="top-links hidden3-bottom">
                     <a href="https://www.linkedin.com/in/gabriel-magro/" target="_blank"><i class="bi bi-linkedin"></i>  LinkedIn</a>
                     <a href="https://github.com/magrogabriel" data-anime2="bottom" target="_blank"><i class="bi bi-github"></i>   GitHub</a>
                 </div>
             </div>
             <div class="img-topcontainer">
-                <img id="me-topcontainer"src="./assets/img/me-topcontainer.png" data-anime="bottom" class="imgtop-ilust hidden2-left" alt="Ilustração minha">
+                <img id="me-topcontainer"src="./assets/img/me-topcontainer.png" data-anime="bottom" class="imgtop-ilust hidden2" alt="Ilustração minha">
                 <img src="./assets/img/risco2.png"  class="absolute imgtop-risco" id = "risco1-bg" alt="Imagem de risco decorativoa">
          </div>
             </div>
@@ -68,7 +72,7 @@
     <section id="about">
         <div class="about-container">
             <div class="about1">
-                <h2 class="hidden1-left">Sobre mim</h2>
+                <h2 class="hidden1">Sobre mim</h2>
             </div>
             <div class="about2">
                 <img src="./assets/img/eu_about.png"  class="foto_perfil" alt="Minha foto de perfil">
@@ -76,8 +80,8 @@
                 <img src="./assets/img/riscos_roxo.png" class="riscos_bg" alt="Asset background"> -->
             </div>
             <div class="about3">
-                <h2 data-anime="right" class="hidden2-right">Oi, me chamo <span class="hidden3-right">Gabriel</span></h2>
-                <p class="hidden2-right">Tenho 28 anos e moro no Rio de Janeiro, RJ. Sou formado em Biologia (não atuando) e estou cursando Análise e Desenvolvimento de Sistemas (remoto). <br>Como não estou trabalhando, dedico integralmente meu tempo para estudar e me desenvolver em programação.<br><br>Estou a procura da minha primeira oportunidade profissional na área.</p>
+                <h2 data-anime="right" class="hidden2-bottom">Oi, me chamo <span class="hidden3-bottom">Gabriel</span></h2>
+                <p class="hidden4-bottom">Tenho 28 anos e moro no Rio de Janeiro, RJ. Sou formado em Biologia (não atuando) e estou cursando Análise e Desenvolvimento de Sistemas (remoto). <br>Como não estou trabalhando, dedico integralmente meu tempo para estudar e me desenvolver em programação.<br><br>Estou a procura da minha primeira oportunidade profissional na área.</p>
             </div>
         </div>
 
@@ -86,37 +90,37 @@
 
     <section id="skills">
         <div class="skills-top">
-            <div class="skills-title hidden1-left">
+            <div class="skills-title hidden1">
                 <h1>Habilidades</h1>
                 <p class="skills-desc">Atualmente tenho estudado para conhecer de maneira mais ampla os diversos campos da profissão. Apesar disso, possuo um foco maior em me aperfeiçoar como Desenvolvedor Full Stack, estudando tecnologias como HTML, CSS, JavaScript, Node.Js, ReactJs e SQL.</p>
             </div>
-            <div class="skills-img hidden2-right">
+            <div class="skills-img hidden2">
                 <img src="./assets/img/vetor-ilust.svg" alt="Ilustração homem sentado">
             </div>
         </div>
 
         <div class="cards-box">
-            <div data-anime1="bottom" class="card hidden3-bottom">
+            <div class="card hidden3-bottom">
                 <img src="./assets/img/html-img.png" alt="Ícone HTML">
                 <p>HTML</p>
             </div>
-            <div data-anime2="bottom" class="card hidden4-bottom">
+            <div class="card hidden4-bottom">
                 <img src="./assets/img/css-img.png" alt="Ícone CSS">
                 <p>CSS</p>
             </div>
-            <div data-anime3="bottom" class="card hidden5-bottom">
+            <div class="card hidden5-bottom">
                 <img src="./assets/img/js-img.png" alt="Ícone JavaScript">
                 <p>JavaScript</p>
             </div>
-            <div data-anime4="bottom" class="card hidden6-bottom">
+            <div class="card hidden6-bottom">
                 <img src="./assets/img/react-img.png" alt="Ícone ReactJs">
                 <p>React</p>
             </div>
-            <div data-anime5="bottom" class="card hidden7-bottom">
+            <div class="card hidden7-bottom">
                 <img src="./assets/img/node-img.png" alt="Ícone NodeJs">
                 <p>NodeJs</p>
             </div>
-            <div data-anime6="bottom" class="card hidden8-bottom">
+            <div class="card hidden8-bottom">
                 <img src="./assets/img/git-img.png" alt="Ícone Git">
                 <p>Git</p>
             </div>
@@ -126,10 +130,10 @@
 
     <section id="projects" class="overlay">
         <div class="projects-content">
-            <div class="projects-desc hidden1-left">
+            <div class="projects-desc hidden1">
                 <h1>Projetos</h1>
             </div>
-            <div class="slide-container hidden2-right">
+            <div class="slide-container hidden2">
                 <div class="swiper">
                     <div class="slide-content">
                         <div class="swiper-wrapper">
