--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Portfólio idealizado e criado para melhor me descrever, assim como minhas habilidades em programação e trabalhos que já desenvolvi a partir de diversas tecnologias FullStack. Nele você encontra também meios de me contatar.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    
+    <link rel="shortcut icon" href="./assets/img/Favicon-4.svg">
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <title>Gabriel M. - Portfólio</title>
@@ -19,12 +20,15 @@
 </head>
 <body>
     <header id="header">
+        <div id="logo">
+            <a href="#header"><img src="./assets/img/Favicon-4.svg" alt=""></a>
+        </div>
         <nav id="nav">
             <button aria-label="Abrir Menu" id="btn-mobile" aria-has-popup="true" aria-controls="menu" aria-expanded="false">
 
                 <span id="hamburguer"></span>
             </button>
-            
+
             <ul id="menu" role="menu">
                 <li>
                     <a href="#top">Home</a>
