--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="./assets/img/Favicon-4.svg">
+    <link rel="icon" href="./assets/img/Favicon-4.svg">
+    <link rel="apple-touch-icon" href="./assets/img/Favicon-4.svg">
+    <link rel="apple-touch-icon-precomposed" href="./assets/img/Favicon-4.svg">
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <title>Gabriel M. - Portfólio</title>
