--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <div id="bgzao">
+    <div id="bg-container">
         <header id="header">
             <div id="logo">
                 <a href="#header"><img src="./assets/img/lettering.svg" alt="Logo do site"></a>
@@ -63,14 +63,14 @@
 
         <section id="top">
             <div class="top-container">
-                <h1 data-anime="left" class="hidden1">Olá, seja bem-vindo(a) ao meu portfólio</h1>
-                <p data-anime="right" class="hidden2">Esse espaço foi pensado e construído inteiramente por mim, desde
+                <h1 class="hidden1">Olá, seja bem-vindo(a) ao meu portfólio</h1>
+                <p class="hidden2">Esse espaço foi pensado e construído inteiramente por mim, desde
                     sua estrutura, estilização e design. Aqui você poderá conhecer mais sobre mim, as habilidades que
                     possuo até o momento e os projetos que já produzi.</p>
                 <div class="top-links hidden3-bottom">
                     <a href="https://www.linkedin.com/in/gabriel-magro/" target="_blank"><i class="bi bi-linkedin"></i>
                         LinkedIn</a>
-                    <a href="https://github.com/magrogabriel" data-anime2="bottom" target="_blank"><i
+                    <a href="https://github.com/magrogabriel" target="_blank"><i
                             class="bi bi-github"></i> GitHub</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <img src="./assets/img/profile_pic.png" class="foto_perfil" alt="Minha foto de perfil">
             </div>
             <div class="about-desc">
-                <h2 data-anime="right" class="hidden2">Sobre mim</span>
+                <h2 class="hidden2">Sobre mim</span>
                 </h2>
                 <p class="hidden3">Me chamo Gabriel, tenho 28 anos e moro no Rio de Janeiro, RJ. Sou formado em Biologia (não
                     atuando) e estou cursando Análise e Desenvolvimento de Sistemas (remoto). <br>Sempre fui apaixonado por tecnologia e, por isso, decidi me dedicar e estudar programação através da graduação, cursos livres, video-aulas e projetos pessoais. <br><br>Estou a procura da minha primeira oportunidade profissional na área.</p>
